--- a/styles/works.css
+++ b/styles/works.css
@@ -39,8 +39,8 @@ font-size: 14px;
 font-style: normal;
 font-weight: 500;
 line-height: 24px; /* 171.429% */
-width: 334px;
-height: 92px;
+/* width: 334px;
+height: 92px; */
 
 }
 .left_work_link{
