--- a/styles/event_info.css
+++ b/styles/event_info.css
@@ -54,8 +54,8 @@ border: 1px solid rgba(177, 39, 38, 0.36);
 }
 
 .event_info_right{
-    height: 790px;
-    overflow-x: scroll;
+    /* height: 790px; */
+    /* overflow-x: scroll; */
 }
 
 /* for event view card */
