--- a/app/globals.css
+++ b/app/globals.css
@@ -181,3 +181,39 @@ body::-webkit-scrollbar-thumb {
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#92effd",GradientType=1);
    /* outline: 1px solid slategrey; */
 }
+
+/* .related_eve_card{
+
+} */
+
+.related_eve_card::-webkit-scrollbar {
+  width: 1px;
+}
+ 
+.related_eve_card::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px blue; */
+  background: none;
+
+}
+ 
+.related_eve_card::-webkit-scrollbar-thumb {
+  border-radius: 22px;
+  /* background-color: darkgrey;
+   */
+   background: rgb(2,0,36);
+   background: -moz-linear-gradient(174deg, rgba(2,0,36,1) 0%, rgba(21,147,203,1) 0%, rgba(146,239,253,0) 100%);
+   background: -webkit-linear-gradient(174deg, rgba(2,0,36,1) 0%, rgba(21,147,203,1) 0%, rgba(146,239,253,0) 100%);
+   background: linear-gradient(174deg, rgba(2,0,36,1) 0%, rgba(21,147,203,1) 0%, rgba(146,239,253,0) 100%);
+   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#92effd",GradientType=1);
+   /* outline: 1px solid slategrey; */
+}
+.white_glass{
+  /* From https://css.glass */
+/* From https://css.glass */
+background: rgba(83, 160, 201, 0.2);
+/* border-radius: 16px; */
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5.3px);
+-webkit-backdrop-filter: blur(5.3px);
+border: 1px solid rgba(83, 160, 201, 0.3);
+}
