--- a/styles/event_info.css
+++ b/styles/event_info.css
@@ -142,20 +142,21 @@ line-height: 30px; /* 187.5% */
 
  .d_start{
     /* From https://css.glass */
-    width: 100px;
-    height: 100px;
-background: rgba(0, 233, 100, 0.45);
+    /* width: 100px;
+    height: 100px; */
+background: rgba(81, 255, 156, 0.45);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(4.5px);
 -webkit-backdrop-filter: blur(4.5px);
 border: 1px solid rgba(0, 233, 100, 0.48);
  }
+ 
  .d_end{
-    width: 100px;
-    height: 100px;
+    /* width: 100px;
+    height: 100px; */
     /* From https://css.glass */
-background: rgba(233, 0, 0, 0.45);
+background: rgba(255, 81, 81, 0.45);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(4.5px);
