--- a/styles/event_info.css
+++ b/styles/event_info.css
@@ -30,7 +30,7 @@ line-height: 30px; /* 187.5% */
 }
 .event_blue_glass{
     /* From https://css.glass */
-    position: relative;
+    /* position: relative; */
 background: rgba(41, 82, 120, 0.29);
 border-radius: 1px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -192,4 +192,40 @@ border: 1px solid rgba(233, 0, 0, 0.48);
      background: linear-gradient(174deg, rgba(2,0,36,1) 0%, rgba(21,203,149,1) 0%, rgba(236,146,253,0) 100%);
      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#ec92fd",GradientType=1);
      /* outline: 1px solid slategrey; */
+  }
+
+  /* .card_box{
+
+  }
+
+  .detail_info{} */
+
+  .card_box:hover:before {
+    opacity: 1;
+  }
+  .card_box:hover .detail_info {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  .card_box:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+    transition: 0.5s;
+    opacity: 0;
+  }
+ .detail_info {
+    /* position: relative;s */
+    z-index: 3;
+    color: white;
+    opacity: 0;
+    /* transform: translateY(30px); */
+    transition: 0.5s;
   }
