--- a/styles/update.css
+++ b/styles/update.css
@@ -37,7 +37,7 @@ background-clip: text;
 
 .up_img_box{
     /* width: 334px; */
-height: 409px;
+/* height: 350px; */
 /* flex-shrink: 0; */
 background-color: #09294a;
 }
@@ -46,20 +46,20 @@ background-color: #09294a;
     color: #FFF;
 /* font-family: Poppins; */
 /* font-size: 42px; */
-font-style: normal;
+/* font-style: normal;
 font-weight: 600;
 line-height: 80%; /* 76.8px */
-letter-spacing: 0.48px;
+/* letter-spacing: 0.48px; */ 
 }
 .up_msg{
     color: rgba(255, 255, 255, 0.70);
 /* font-family: Poppins; */
-font-size: 18px;
+/* font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: 170%; /* 30.6px */
-letter-spacing: 0.18px;
-height: 170px;
+/* letter-spacing: 0.18px; */
+/* height: 170px; */ 
 }
 
 .up_btn{
