--- a/styles/header.css
+++ b/styles/header.css
@@ -31,7 +31,7 @@ background-clip: text;
   /* font-size: 32px; */
   font-style: normal;
   /* font-weight: 800; */
-  line-height: 75px;
+  /* line-height: 75px; */
   letter-spacing: -1.28px;
 }
 
